--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -52,7 +52,7 @@
                         <!-- <p>I have worked in the frontend development domain and experienced in using various frontend development tools and technologies. My goal is to work with a team of like-minded professionals who share the same passion for creating innovative and interactive web designs.</p>
                         <p>In the future, I aim to keep learning and improving my skills to become a proficient frontend developer. My ultimate goal is to make a significant contribution to the field of web development and create memorable and engaging experiences for users.</p> -->
                         
-                        <a href="#" class="btn">Download Resume</a>
+                        <a href="Namrata's 22.11.23 Resume.pdf" class="btn">Download Resume</a>
                     </div>
                     <div class="home-img padd-15">
                         <img src="images/myPicPNG.png" alt="">
